# swKokkos

./: README.md
CG/: CMakeLists.txt
CG/script/: build.sh  dcu-bind-419.in  run  run-iap-gpu.in  run-ocean-light.in  run-taishan.in  submit-419.in
CG/src/: main.cpp  pcg.cpp
CG/src/athread-impl/: slave.c
CG/src/inc/: biio.h  functor.hpp  pcg.h  utils.h
CG/swKokkos-4.1.00/cmake/: kokkos_arch.cmake  sw.cmake
CG/swKokkos-4.1.00/core/src/: Kokkos_Core_fwd.hpp  Kokkos_View.hpp
CG/swKokkos-4.1.00/core/src/Athread/: Kokkos_Athread.cpp  Kokkos_Athread_FastThreadSpawn.h  (+8 more)
CG/swKokkos-4.1.00/tpls/desul/: Config.hpp.cmake.in
CG/test/: cg_matrix_set.csv  cg_results.csv  run_cg.sh  test.sh
LICOM/: CMakeLists.txt
LICOM/kokkos/swKokkos-4.1.00-ori/cmake/: kokkos_enable_devices.cmake
LICOM/ocnlog/: ocn.log-4proc-define-iso  ocn.log-4proc-undef-iso  ocn.log-c-40proc-45-44-undefiso-intel  ocn.log-c-48proc-45-37-undefiso-intel  ocn.log-c-4proc-180-110-undef-iso-intel  ocn.log-c-undefine-iso-80-sw  ocn.log-cpp-8proc-180-55-undef-iso-hygon  ocn.log-f-120proc-30-22-undefiso-intel  ocn.log-f-120proc-30-22-undefiso-sw  ocn.log-f-40proc-45-44-iso-intel  ocn.log-f-40proc-45-44-undefiso-intel  ocn.log-f-8proc-180-55-undef-iso-hygon  ocn.log-f-undefine-iso-80-sw  ocn.log-k-athread-120proc-30-22-undefiso-sw  ocn.log-k-cu-4proc-180-110-undefiso  ocn.log-k-s-undefine-iso-80-sw  ocn.log-k-undefine-iso-80-sw
LICOM/scripts/: build  check_result  cp-100km-data  cp-10km-data  cp-5km-data  dcu-bind-419.in  dcu_bind  licom-100km-config.h.in  licom-10km-config.h.in  licom-5km-config.h.in  licom_test_time.hpp.in  ocean-100km-config.in  ocean-10km-config.in  ocean-5km-config.in  remake  run  run-419.in  run-iap-gpu.in  run-ocean-light.in  submit  submit-419.in  submit-ocean-light.in  submit-taishan.in
LICOM/src/: POP_BlocksMod.F90  POP_DistributionMod.F90  POP_HaloMod.F90  accumm_daily.F90  accumm_daily_avg.F90  barotr.F90  bclinc.F90  blocks.F90  canuto_2002.F90  canuto_ini_2002.F90  convadj.F90  domain.F90  dyn_mod.F90  energy.F90  forc_mod.F90  forc_mod.F90-100km  gather_scatter.F90  grid.F90  hmix_del4.F90  icesnow.F90  inirun.F90  isopyc.F  jra_daily.F90-100km  jra_daily.F90-10km  jra_daily.F90-5km  licom_core.cpp  licom_drv.F90  pconst_mod.F90  pmix_mod.F90  rdriver.F90  readyc.F90  readyt.F90  ssave-cdf-instant.F90  ssave-cdf-instant.F90-100km  ssave-cdf-instant.F90-10km  ssave-cdf-instant.F90-5km  stepon.cpp  thermalexpansion.F90  tracer.F90  tracer_mod.F90  (+3 more)
LICOM/src/athread-impl/: athread_halo_transpose_host.c  athread_halo_transpose_slave.c  athread_kernel_host.c  athread_kernel_slave-bk.c  athread_kernel_slave-new-bk.c  athread_kernel_slave.c  athread_param.h  athread_tracer_advection_host.c  athread_tracer_advection_slave.c
LICOM/src/cpp-impl/: cpp_barotr.cpp  cpp_bclinc.cpp  cpp_blocks.cpp  cpp_buf_mod.cpp  cpp_canuto_2002.cpp  cpp_canuto_mod.cpp  cpp_convadj.cpp  cpp_dens.cpp  cpp_density.cpp  cpp_domain.cpp  cpp_dyn_mod.cpp  cpp_forc_mod.cpp  cpp_grid.cpp  cpp_halo_transpose.hpp  cpp_hmix_del2.cpp  cpp_hmix_del4.cpp  cpp_icesnow.cpp  cpp_invtri.cpp  cpp_isoadv.cpp  cpp_isoflux.cpp  cpp_isopyc.cpp  cpp_isopyc_mod.cpp  cpp_jra_daily.cpp  cpp_msg_mod.cpp  cpp_operators.cpp  cpp_output_mod.cpp  cpp_param_mod.cpp  cpp_pconst_mod.cpp  cpp_pmix_mod.cpp  cpp_pop_blocks_mod.cpp  cpp_pop_comm_mod.cpp  cpp_pop_distribution_mod.cpp  cpp_pop_halo_mod.cpp  cpp_pop_reductions_mod.hpp  cpp_readyc.cpp  cpp_readyt.cpp  cpp_thermalexpansion.cpp  cpp_tmp_var.cpp  cpp_tracer.cpp  cpp_tracer_mod.cpp  (+3 more)
LICOM/src/head/: cpp_blocks.h  cpp_buf_mod.h  cpp_canuto_mod.h  cpp_constant_mod.h  cpp_domain.h  cpp_dyn_mod.h  cpp_extern_functions.h  cpp_forc_mod.h  cpp_grid.h  cpp_hmix_del2.h  cpp_hmix_del4.h  cpp_isopyc_mod.h  cpp_msg_mod.h  cpp_output_mod.h  cpp_param_mod.h  cpp_pconst_mod.h  cpp_pmix_mod.h  cpp_pop_blocks_mod.h  cpp_pop_comm_mod.h  cpp_pop_distribution_mod.h  cpp_pop_grid_horz_mod.h  cpp_pop_halo_mod.hpp  cpp_precision_mod.h  cpp_shr_const_mod.h  cpp_tmp_var.h  cpp_tracer_mod.h  cpp_work_mod.h  def-undef.h  fortran_blocks.h  fortran_buf_mod.h  fortran_canuto_mod.h  fortran_domain.h  fortran_dyn_mod.h  fortran_extern_functions.h  fortran_forc_mod.h  fortran_grid.h  fortran_hmix_del2.h  fortran_hmix_del4.h  fortran_isopyc_mod.h  fortran_msg_mod.h  (+26 more)
LICOM/src/kokkos-impl/: kokkos_barotr.cpp  kokkos_barotr.hpp  kokkos_bclinc.cpp  kokkos_bclinc.hpp  kokkos_buf_mod.cpp  kokkos_canuto_mod.cpp  kokkos_convadj.cpp  kokkos_convadj.hpp  kokkos_dyn_mod.cpp  kokkos_forc_mod.cpp  kokkos_grid.cpp  kokkos_hmix_del2.cpp  kokkos_hmix_del4.cpp  kokkos_icesnow.cpp  kokkos_icesnow.hpp  kokkos_isopyc_mod.cpp  kokkos_jra_daily.cpp  kokkos_jra_daily.hpp  kokkos_nextstep.cpp  kokkos_nextstep.hpp  kokkos_output_mod.cpp  kokkos_pconst_mod.cpp  kokkos_pmix_mod.cpp  kokkos_readyc.cpp  kokkos_readyc.hpp  kokkos_readyt.cpp  kokkos_readyt.hpp  kokkos_tmp_var.cpp  kokkos_tracer.cpp  kokkos_tracer.hpp  kokkos_tracer_mod.cpp  kokkos_view_op.cpp  kokkos_work_mod.cpp
LICOM/src/util/: allocate_readyc.F90  allocate_readyt.F90  allocate_tracer.F90  cpp_util.cpp  daily_update.cpp  fortran_mpi_barrier.F90  fortran_test_time.cpp  free_fortran_mem.F90  get_block_info.F90  get_f_pop_distrb_info.F90  init_licom.F90  mpi_bcast_tracer.F90  mpi_reduce_tracer.F90  pop_haloupdate.cpp  pop_haloupdate.hpp  pop_haloupdate_barotr.F90  pop_haloupdate_bclinc.F90  pop_haloupdate_readyc.F90  pop_haloupdate_smts.F90  pop_haloupdate_tracer.F90  scatter_global_jra.F90
mini-benchmark/: CMakeLists.txt
mini-benchmark/run/: axpy_results.csv  build.sh  dot_product_results.csv  run_sw.sh
mini-benchmark/src/: kokkos_3d_mult.hpp  kokkos_axpy.hpp  kokkos_dot_product.hpp  kokkos_matrix_add.hpp  kokkos_stencil.hpp  main.cpp  test_mdrange.hpp  test_range.hpp  test_stencil.hpp
mini-benchmark/src/athread-impl/: athread_3d_mult.c  athread_3d_mult_slave.c  athread_axpy.c  athread_axpy_slave.c  athread_dot_product_2d.c  athread_dot_product_2d_slave.c  athread_matrix_add.c  athread_matrix_add_slave.c  athread_param.h  athread_stencil.c  athread_stencil_slave.c
(+165 files in other folders)
